--- a/src/styles/productCard.scss
+++ b/src/styles/productCard.scss
@@ -1,11 +1,10 @@
 %productCard {
     width: 100%;
     max-width: 250px;
-    // max-width: 100%;
-    // width: 250px;
     height: 355px;
 
     border: 2px solid var(--grey-100);
     border-radius: 5px;
+    overflow: auto;
 
 }
